--- a/src/app/src/main/res/layout/perfil_usuario_activity.xml
+++ b/src/app/src/main/res/layout/perfil_usuario_activity.xml
@@ -181,7 +181,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/rectangulos"
         android:elevation="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/txtRestablecerPerfil"
+        app:layout_constraintBottom_toTopOf="@+id/txtRestablecerPass"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -203,7 +203,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/txtRestablecerPerfil"
+        android:id="@+id/txtRestablecerPass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
@@ -226,13 +226,13 @@
         android:onClick="botonPerfilEditarPerfil"
         android:text="Editar mis datos"
         android:textColor="@color/colorFondo"
-        app:layout_constraintBottom_toTopOf="@+id/button4"
+        app:layout_constraintBottom_toTopOf="@+id/buttonCerrarSesion"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtRestablecerPerfil" />
+        app:layout_constraintTop_toBottomOf="@+id/txtRestablecerPass" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/buttonCerrarSesion"
         android:layout_width="0dp"
         android:layout_height="40dp"
         android:layout_marginStart="40dp"
